--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,30 +1,39 @@
 .main {
   padding: 2em 5em 5em 5em;
 }
+
 .main .container {
   width: 100%;
 }
+
 .main form {
   display: flex;
   flex-direction: column;
 }
+
 .create-container .mat-card {
   width: 40%;
 }
+
 .create-container button {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
 .mat-table {
-  width: 100%;
+  width: 55%;
 }
+
 .view-container button {
-  margin-right: 12px;
+  margin-right: 15px;
+  float: right;
 }
+
 .edit {
   background: green;
   color: white;
 }
+
 .delete {
   background: red;
   color: white;
