--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,37 +10,37 @@
           <mat-form-field>
             <input matInput placeholder="Enter Position">
           </mat-form-field>
-          <button mat-raised-button>Save</button>
+          <button color="primary" mat-raised-button>Save</button>
         </form>
       </mat-card>
     </div>
 
     <div class="view-container">
       <h4>View and Delete</h4>
-      <mat-card>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
+      <!-- <mat-card> -->
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="Position">
-            <th mat-header-cell *matHeaderCellDef> Position </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-          </ng-container>
+        <ng-container matColumnDef="Position">
+          <th mat-header-cell *matHeaderCellDef> Position </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
 
-          <ng-container matColumnDef="Action">
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-raised-button class="edit">Edit</button>
-              <button mat-raised-button class="delete">Delete</button>
-            </td>
-          </ng-container>
+        <ng-container matColumnDef="Action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button class="edit">Edit</button>
+            <button mat-raised-button class="delete">Delete</button>
+          </td>
+        </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </mat-card>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <!-- </mat-card> -->
     </div>
 
     <div class="create-container">
@@ -53,7 +53,7 @@
           <mat-form-field>
             <input matInput placeholder="Enter Position">
           </mat-form-field>
-          <button mat-raised-button>Update</button>
+          <button color="primary" mat-raised-button>Update</button>
         </form>
       </mat-card>
     </div>
